--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
         <div class="home__main main ">
             <div class="main__navbar navbar">
                 <i class="fas fa-bars navbar__icon"></i>
-                <h3 class="navbar__title">Mini kasyno</h3>
+                <a href="../index.html"class="navbar__title">Mini kasyno</a>
                 <i id="user-icon" class="far fa-user navbar__icon navbar__icon--login"></i>
             </div>
             <div class="main__header header">
