--- a/public/war/index.html
+++ b/public/war/index.html
@@ -23,19 +23,21 @@
         <div class="war__navigation-box-left navigation-box-left">
             <i class="fas fa-times navigation-box-left__cross"></i>
             <ul class="navigation-box-left__list">
-                <ul class="navigation-box-left__item">
+                <li class="navigation-box-left__item">
                     <a class="navigation-box-left__link" href="../index.html">Strona Główna</a>
-                </ul>
-                <ul class="navigation-box-left__item">
-                    <a class="navigation-box-left__link" href="../contact/index.html">Kontakt</a></ul>
-                <ul class="navigation-box-left__item">
-                    <a class="navigation-box-left__link" href="../blackjack/index.html">Blackjack</a></ul>
-                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="index.html">Wojna</a>
-                </ul>
-                <ul class="navigation-box-left__item">
-                    <a class="navigation-box-left__link" href="../baccarat/index.html">Baccarat</a></ul>
-                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
-                <ul class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></ul>
+                </li>
+                <li class="navigation-box-left__item">
+                    <a class="navigation-box-left__link" href="../contact/index.html">Kontakt</a></li>
+                <li class="navigation-box-left__item">
+                    <a class="navigation-box-left__link" href="../rankings/index.html">Rankingi</a></li>
+                <li class="navigation-box-left__item">
+                    <a class="navigation-box-left__link" href="../blackjack/index.html">Blackjack</a></li>
+                <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="index.html">Wojna</a>
+                </li>
+                <li class="navigation-box-left__item">
+                    <a class="navigation-box-left__link" href="../baccarat/index.html">Baccarat</a></li>
+                <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></li>
+                <li class="navigation-box-left__item"><a class="navigation-box-left__link" href="#">Game</a></li>
             </ul>
         </div>
         <div class="war__navigation-box-right navigation-box-right">
@@ -81,7 +83,7 @@
                 <h3 class="user-stats__title">Witaj, poniżej znajdziesz kilka statystyk z Twoich dotychczasowych gier
                 </h3>
                 <p class="user-stats__data user-stats__data--games">Ilość gier: <span id="nOfGames">0</span></p>
-                <p class="user-stats__data user-stats__data--wins">Wygrane: <span id="nOfWonGames">0</span></p>
+                <p class="user-stats__data user-stats__data--wins">Wygrane: <span id="nOfWins">0</span></p>
                 <p class="user-stats__data user-stats__data--draws">Remisy: <span id="nOfDraws">0</span></p>
                 <p class="user-stats__data user-stats__data--losses">Przegrane: <span id="nOfLosses">0</span></p>
                 <p class="user-stats__data user-stats__data--balance">Twoje saldo: <span id="balance">0</span></p>
@@ -135,6 +137,7 @@
                 <p class="score-container__text"></p>
             </div>
         </div>
+        <h1 class="score-info"></h1>
         <script src="../js/nav.js"></script>
         <script src="../js/table-color.js"></script>
         <script src="script.js"></script>
